# libgui

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Events.h  Label.cpp  Label.h  Layout.cpp  Layout.h  Object.h  README.md  Widget.cpp  Widget.h  Window.cpp  Window.h  main.cpp  make.sh
doc/: X11_RGB.html
